--- a/NewsApp/View/StoryBoard/Base.lproj/Main.storyboard
+++ b/NewsApp/View/StoryBoard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49Z-hr-tv5">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -11,16 +11,149 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="jZQ-n4-dtK">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1yR-S3-Max">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="IO1-vq-Cp9"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="mSu-TH-t6m"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="1yR-S3-Max" firstAttribute="top" secondItem="2aa-69-lAj" secondAttribute="top" id="EcG-Tk-Syn"/>
+                            <constraint firstItem="2aa-69-lAj" firstAttribute="trailing" secondItem="1yR-S3-Max" secondAttribute="trailing" id="TXz-Un-vl5"/>
+                            <constraint firstItem="2aa-69-lAj" firstAttribute="bottom" secondItem="1yR-S3-Max" secondAttribute="bottom" id="cGF-j2-dfe"/>
+                            <constraint firstItem="1yR-S3-Max" firstAttribute="leading" secondItem="2aa-69-lAj" secondAttribute="leading" id="wGE-1R-TJb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2aa-69-lAj"/>
                     </view>
+                    <navigationItem key="navigationItem" id="mN7-qS-RmB"/>
+                    <connections>
+                        <outlet property="ib_tblView" destination="1yR-S3-Max" id="5b2-Kd-USS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="134"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="133.92857142857142"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Boh-pm-8yc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="49Z-hr-tv5" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TfL-ti-p3m">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="UN9-fR-uWP"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OSx-qT-LVJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="133.92857142857142"/>
+        </scene>
+        <!--Article Detail View Controller-->
+        <scene sceneID="glU-Ot-pud">
+            <objects>
+                <viewController storyboardIdentifier="ArticleDetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tqU-30-O0F" customClass="ArticleDetailViewController" customModule="NyTimes" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Bpg-gW-zHT">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="1GR-AO-Y3K">
+                                <rect key="frame" x="0.0" y="45" width="414" height="269"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ps-gb-8eS">
+                                <rect key="frame" x="20" y="324" width="374" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <color key="textColor" red="0.14901960780000001" green="0.1960784314" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                </variation>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IxM-nF-W3V">
+                                <rect key="frame" x="20" y="351.5" width="239" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                </variation>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20-02-2020" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C3d-dR-mPR">
+                                <rect key="frame" x="274" y="351.5" width="120" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="JUD-Md-Eyy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <color key="textColor" red="0.14901960780000001" green="0.1960784314" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                </variation>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k0e-Uc-Qar">
+                                <rect key="frame" x="20" y="404.5" width="374" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.14901960780000001" green="0.1960784314" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="1GR-AO-Y3K" firstAttribute="trailing" secondItem="wXK-ht-Adi" secondAttribute="trailing" id="5kb-vZ-TKd"/>
+                            <constraint firstItem="1GR-AO-Y3K" firstAttribute="leading" secondItem="wXK-ht-Adi" secondAttribute="leading" id="QM6-d7-A3k"/>
+                            <constraint firstItem="3ps-gb-8eS" firstAttribute="leading" secondItem="wXK-ht-Adi" secondAttribute="leading" constant="20" id="REw-Hn-gFh"/>
+                            <constraint firstItem="3ps-gb-8eS" firstAttribute="top" secondItem="1GR-AO-Y3K" secondAttribute="bottom" constant="10" id="VCH-F6-lWz"/>
+                            <constraint firstItem="k0e-Uc-Qar" firstAttribute="trailing" secondItem="3ps-gb-8eS" secondAttribute="trailing" id="YRx-ZN-g2I"/>
+                            <constraint firstItem="k0e-Uc-Qar" firstAttribute="top" secondItem="IxM-nF-W3V" secondAttribute="bottom" priority="750" constant="35" id="cKv-FU-w9X"/>
+                            <constraint firstItem="wXK-ht-Adi" firstAttribute="trailing" secondItem="C3d-dR-mPR" secondAttribute="trailing" constant="20" id="eqs-PS-vAK"/>
+                            <constraint firstItem="IxM-nF-W3V" firstAttribute="top" secondItem="3ps-gb-8eS" secondAttribute="bottom" constant="7" id="fZv-31-CfQ"/>
+                            <constraint firstItem="1GR-AO-Y3K" firstAttribute="height" secondItem="Bpg-gW-zHT" secondAttribute="height" multiplier="0.3" id="gAE-En-w9s"/>
+                            <constraint firstItem="1GR-AO-Y3K" firstAttribute="top" secondItem="wXK-ht-Adi" secondAttribute="top" constant="1" id="jNV-JW-hhb"/>
+                            <constraint firstItem="k0e-Uc-Qar" firstAttribute="leading" secondItem="3ps-gb-8eS" secondAttribute="leading" id="jU0-fa-qSi"/>
+                            <constraint firstItem="wXK-ht-Adi" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="k0e-Uc-Qar" secondAttribute="bottom" constant="10" id="ka6-Ht-CkZ"/>
+                            <constraint firstItem="C3d-dR-mPR" firstAttribute="top" secondItem="IxM-nF-W3V" secondAttribute="top" id="kqj-wo-s1Q"/>
+                            <constraint firstItem="wXK-ht-Adi" firstAttribute="trailing" secondItem="3ps-gb-8eS" secondAttribute="trailing" constant="20" id="mOf-Kv-BwX"/>
+                            <constraint firstItem="IxM-nF-W3V" firstAttribute="leading" secondItem="3ps-gb-8eS" secondAttribute="leading" id="oPG-iA-oPe"/>
+                            <constraint firstItem="C3d-dR-mPR" firstAttribute="leading" secondItem="IxM-nF-W3V" secondAttribute="trailing" constant="15" id="ori-lz-c6o"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="wXK-ht-Adi"/>
+                    </view>
+                    <connections>
+                        <outlet property="ib_ArticleDescLabel" destination="k0e-Uc-Qar" id="yRw-NP-aZ1"/>
+                        <outlet property="ib_ImageView" destination="1GR-AO-Y3K" id="CYd-v5-0sp"/>
+                        <outlet property="ib_PublishDateLabel" destination="C3d-dR-mPR" id="glL-01-xh9"/>
+                        <outlet property="ib_SectionSubSectionLabel" destination="IxM-nF-W3V" id="ZXv-Ql-ghb"/>
+                        <outlet property="ib_TittleLabel" destination="3ps-gb-8eS" id="xMP-EB-Jeh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ioP-gv-cWg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1641" y="60"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="placeholder" width="1300" height="731.5"/>
+    </resources>
+    <color key="tintColor" red="0.14901960780000001" green="0.1960784314" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
 </document>
