--- a/NewsApp/View/StoryBoard/Base.lproj/Main.storyboard
+++ b/NewsApp/View/StoryBoard/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="133.92857142857142"/>
+            <point key="canvasLocation" x="864" y="60"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Boh-pm-8yc">
@@ -58,7 +58,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OSx-qT-LVJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="133.92857142857142"/>
+            <point key="canvasLocation" x="167" y="60"/>
         </scene>
         <!--Article Detail View Controller-->
         <scene sceneID="glU-Ot-pud">
